tests/error/07.desc
Runtime error - assignment func: big index